# linux_2020

03_TerminalProject/: Makefile  Show.c
04_Multifile/: Makefile  const.c  fun.c  outlib.h  prog.c
05_Environmental/: Makefile.am  configure.ac  window.c
06_Debugging/: Makefile  fail.c
07_DebuggingTracing/: Makefile  wrapper.c
08_TestingCoverage/: Makefile  Makefile.am  buf.h  configure.ac
08_TestingCoverage/src/: Makefile.am  libbuf.c  tests.c
08_TestingCoverage/tests/: Makefile.am  stest.ts
09_I18nL10n/: Makefile.am  configure.ac  guess.pot  guessing_game.c
10_Documenting/: Doxyfile.in  Makefile.am  configure.ac  guessing.1  guessing_game.c  guessing_game.md  ru.po
11_Toolkits/: Makefile.am  configure.ac  word_count.c
13_PatchInstall/: Makefile.am  configure.ac  guessing_game.c  ru.po
documenting/: Doxyfile.in  configure.ac
documenting/src/: Makefile.am  libbuf.md
documenting/tests/: Makefile.am
